tests/valid/no-interpolation.workflow
action "a" {
	uses="./x"
	runs="${value}"
}

# ASSERT {
#   "result":       "success",
#   "numActions":   1,
#   "numWorkflows": 0
# }
